Added two commands for CreateServiceFilters. Working on holiday themes again.

--- a/source/SearchFabServicesDialog/App.config
+++ b/source/SearchFabServicesDialog/App.config
@@ -10,6 +10,9 @@
             <setting name="FabSettingsAutoReload" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="AllowAutoHidePanes" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CODE.Free.Properties.Settings>
     </userSettings>
 </configuration>
