--- a/source/SearchFabServicesDialog/Properties/Settings.settings
+++ b/source/SearchFabServicesDialog/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="FabSettingsAutoReload" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="AllowAutoHidePanes" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
