Added DisableCutIn, still needs work and testing

--- a/source/SearchFabServicesDialog/App.config
+++ b/source/SearchFabServicesDialog/App.config
@@ -13,6 +13,9 @@
             <setting name="AllowAutoHidePanes" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="AllowCutIn" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CODE.Free.Properties.Settings>
     </userSettings>
 </configuration>
