--- a/source/SearchFabServicesDialog/Properties/Settings.settings
+++ b/source/SearchFabServicesDialog/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="AllowAutoHidePanes" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="AllowCutIn" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
