--- a/install/Installer.csproj
+++ b/install/Installer.csproj
@@ -6,7 +6,7 @@
         <PlatformTarget>x64</PlatformTarget>
         <TargetFramework>net48</TargetFramework>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <Configurations>Debug;Release</Configurations>
+        <Configurations>Debug;Release;Debug R24</Configurations>
     </PropertyGroup>
 
     <ItemGroup>
