--- a/source/SearchFabServicesDialog/CODE.Free.csproj
+++ b/source/SearchFabServicesDialog/CODE.Free.csproj
@@ -1,107 +1,133 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <UseWPF>true</UseWPF>
-        <LangVersion>latest</LangVersion>
-        <PlatformTarget>x64</PlatformTarget>
-        <ImplicitUsings>true</ImplicitUsings>
-        <PublishAddinFiles>true</PublishAddinFiles>
+	<PropertyGroup>
+		<UseWPF>true</UseWPF>
+		<LangVersion>latest</LangVersion>
+		<PlatformTarget>x64</PlatformTarget>
+		<ImplicitUsings>true</ImplicitUsings>
+		<PublishAddinFiles Condition="$(Configuration.Contains('Release'))">true</PublishAddinFiles>
+		<PublishAddinFiles Condition="'$(Configuration)'=='Debug R24'">false</PublishAddinFiles>
 		<GenerateDependencyFile>false</GenerateDependencyFile>
-		<Configurations>Release R21;Release R22;Release R23;Release R24;Release R25</Configurations>
-        <Configurations>$(Configurations);Release R20;Release R21;Release R22;Release R23;Release R24;Release R25</Configurations>
+		<Configurations>Release R21;Release R22;Release R23;Release R24;Release R25;Release R20;Debug R24</Configurations>
+		<Configurations>$(Configurations);Release R20;Release R21;Release R22;Release R23;Release R24;Release R25</Configurations>
 		<RevitLocation>C:\Program Files\Autodesk\Revit</RevitLocation>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="$(Configuration.Contains('R20'))">
-        <RevitVersion>2020</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R21'))">
-        <RevitVersion>2021</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R22'))">
-        <RevitVersion>2022</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
 	</PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R23'))">
-        <RevitVersion>2023</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R24'))">
-        <RevitVersion>2024</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('R25'))">
-        <RevitVersion>2025</RevitVersion>
-        <TargetFramework>net8.0-windows</TargetFramework>
-    </PropertyGroup>
 
-    <PropertyGroup>
-        <StartAction>Program</StartAction>
-        <StartProgram>C:\Program Files\Autodesk\Revit $(RevitVersion)\Revit.exe</StartProgram>
-        <StartArguments>/language ENG</StartArguments>
-    </PropertyGroup>
+	<PropertyGroup Condition="$(Configuration.Contains('R20'))">
+		<RevitVersion>2020</RevitVersion>
+		<TargetFramework>net48</TargetFramework>
+	</PropertyGroup>
+	<PropertyGroup Condition="$(Configuration.Contains('R21'))">
+		<RevitVersion>2021</RevitVersion>
+		<TargetFramework>net48</TargetFramework>
+	</PropertyGroup>
+	<PropertyGroup Condition="$(Configuration.Contains('R22'))">
+		<RevitVersion>2022</RevitVersion>
+		<TargetFramework>net48</TargetFramework>
+	</PropertyGroup>
+	<PropertyGroup Condition="$(Configuration.Contains('R23'))">
+		<RevitVersion>2023</RevitVersion>
+		<TargetFramework>net48</TargetFramework>
+	</PropertyGroup>
+	<PropertyGroup Condition="$(Configuration.Contains('R24'))">
+		<RevitVersion>2024</RevitVersion>
+		<TargetFramework>net48</TargetFramework>
+	</PropertyGroup>
+	<PropertyGroup Condition="$(Configuration.Contains('R25'))">
+		<RevitVersion>2025</RevitVersion>
+		<TargetFramework>net8.0-windows</TargetFramework>
+	</PropertyGroup>
 
-    <ItemGroup>
-      <Compile Remove="Commands\AutoHidePanes.cs" />
-      <Compile Remove="Commands\SetParameterByFilter.cs" />
-      <Compile Remove="Commands\UpdateExportPcf.cs" />
-    </ItemGroup>
+	<PropertyGroup>
+		<StartAction>Program</StartAction>
+		<StartProgram>$(RevitLocation) $(RevitVersion)\Revit.exe</StartProgram>
+		<StartArguments>/language ENG</StartArguments>
+	</PropertyGroup>
 
-    <ItemGroup>
-      <None Remove="Resources\Icons\AddAll.png" />
-      <None Remove="Resources\Icons\Code Icon.ico" />
-      <None Remove="Resources\Icons\CreateLinesFilters16.png" />
-      <None Remove="Resources\Icons\CreateLinesFilters32.png" />
-      <None Remove="Resources\Icons\CreateSurfacesFilters16.png" />
-      <None Remove="Resources\Icons\CreateSurfacesFilters32.png" />
-      <None Remove="Resources\Icons\Refresh.ico" />
-      <None Remove="Resources\Icons\RemoveAll.png" />
-      <None Remove="Resources\Icons\RibbonIcon16.png" />
-      <None Remove="Resources\Icons\RibbonIcon32.png" />
-    </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R21|AnyCPU'">
+		<DefineConstants>$(DefineConstants);R21</DefineConstants>
+	</PropertyGroup>
 
-    <ItemGroup>
-      <Page Remove="Resources\Halloween.xaml" />
-    </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R22|AnyCPU'">
+		<DefineConstants>$(DefineConstants);R22</DefineConstants>
+	</PropertyGroup>
 
-    <ItemGroup>
-      <EmbeddedResource Include="Resources\Icons\AddAll.png" />
-      <EmbeddedResource Include="Resources\Icons\Code Icon.ico">
-        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-      </EmbeddedResource>
-      <EmbeddedResource Include="Resources\Icons\Refresh.ico">
-        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-      </EmbeddedResource>
-      <EmbeddedResource Include="Resources\Icons\RemoveAll.png" />
-    </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R23|AnyCPU'">
+		<DefineConstants>$(DefineConstants);R23</DefineConstants>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Nice3point.Revit.Build.Tasks" Version="1.*" />
-        <PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
-        <PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
-    </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R24|AnyCPU'">
+		<DefineConstants>$(DefineConstants);R24</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU'">
+		<DefineConstants>$(DefineConstants);R25</DefineConstants>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug R24|AnyCPU'">
+		<DefineConstants>$(DefineConstants);R24</DefineConstants>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Compile Remove="Commands\AutoHidePanes.cs" />
+		<Compile Remove="Commands\SetParameterByFilter.cs" />
+		<Compile Remove="Commands\UpdateExportPcf.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Remove="Resources\Icons\AddAll.png" />
+		<None Remove="Resources\Icons\Code Icon.ico" />
+		<None Remove="Resources\Icons\CODE32.png" />
+		<None Remove="Resources\Icons\CreateLinesFilters16.png" />
+		<None Remove="Resources\Icons\CreateLinesFilters32.png" />
+		<None Remove="Resources\Icons\CreateSurfacesFilters16.png" />
+		<None Remove="Resources\Icons\CreateSurfacesFilters32.png" />
+		<None Remove="Resources\Icons\Refresh.ico" />
+		<None Remove="Resources\Icons\RemoveAll.png" />
+		<None Remove="Resources\Icons\RibbonIcon16.png" />
+		<None Remove="Resources\Icons\RibbonIcon32.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Page Remove="Resources\Halloween.xaml" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Include="Resources\Icons\AddAll.png" />
+		<Resource Include="Resources\Icons\Code Icon.ico">
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Resource>
+		<EmbeddedResource Include="Resources\Icons\Refresh.ico">
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</EmbeddedResource>
+		<EmbeddedResource Include="Resources\Icons\RemoveAll.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Nice3point.Revit.Build.Tasks" Version="1.*" />
+		<PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*" />
+		<PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*" />
+		<PackageReference Include="Nice3point.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
+		<PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
+	</ItemGroup>
 	<ItemGroup>
 		<Reference Include="AdWindows">
-		  <HintPath>$(RevitLocation) $(RevitVersion)\AdWindows.dll</HintPath>
-		  <Private>False</Private>
+			<HintPath>$(RevitLocation) $(RevitVersion)\AdWindows.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Autodesk.UI.Themes">
-		  <HintPath>$(RevitLocation) $(RevitVersion)\Autodesk.UI.Themes.dll</HintPath>
-		  <Private>False</Private>
+			<HintPath>$(RevitLocation) $(RevitVersion)\Autodesk.UI.Themes.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Autodesk.UI.Windows">
-		  <HintPath>$(RevitLocation) $(RevitVersion)\Autodesk.UI.Windows.dll</HintPath>
-		  <Private>False</Private>
+			<HintPath>$(RevitLocation) $(RevitVersion)\Autodesk.UI.Windows.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
-		<Reference Include="DevOutput">
-		  <HintPath>C:\Users\Martin Magallanes\AppData\Roaming\Autodesk\Revit\Addins\$(RevitVersion)\DevOutput\DevOutput.dll</HintPath>
+		<Reference Include="DevOutput" Condition="'$(Configuration)'=='Debug R24'">
+			<HintPath>$(userprofile)\AppData\Roaming\Autodesk\Revit\Addins\$(RevitVersion)\DevOutput\DevOutput.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="FabricationAPI">
-		  <HintPath>C:\Program Files\Autodesk\Fabrication 2021\CADmep\FabricationAPI.dll</HintPath>
+			<HintPath>C:\Program Files\Autodesk\Fabrication 2021\CADmep\FabricationAPI.dll</HintPath>
 		</Reference>
 		<Reference Include="System.Net.Http" />
 		<Reference Include="UIFramework">
@@ -115,7 +141,7 @@
 			<SpecificVersion>False</SpecificVersion>
 		</Reference>
 		<Reference Include="UIFrameworkServices">
-		  <HintPath>C:\Program Files\Autodesk\Revit 2021\UIFrameworkServices.dll</HintPath>
+			<HintPath>C:\Program Files\Autodesk\Revit 2021\UIFrameworkServices.dll</HintPath>
 		</Reference>
 		<Reference Include="UserInterfaceUtility">
 			<HintPath>$(RevitLocation) $(RevitVersion)\UserInterfaceUtility.dll</HintPath>
@@ -135,38 +161,42 @@
 		<Reference Include="WindowsFormsIntegration" />
 	</ItemGroup>
 	<ItemGroup>
-	  <None Include="Commands\AutoHidePanes.cs" />
-	  <None Include="Commands\SetParameterByFilter.cs" />
-	  <None Include="Commands\UpdateExportPcf.cs" />
-	  <None Include="Resources\Halloween.xaml">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
+		<None Include="Commands\AutoHidePanes.cs" />
+		<None Include="Commands\SetParameterByFilter.cs" />
+		<None Include="Commands\UpdateExportPcf.cs" />
+		<None Include="Resources\Halloween.xaml">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 	<ItemGroup>
-	  <Resource Include="Resources\Icons\CreateLinesFilters16.png" />
-	  <Resource Include="Resources\Icons\CreateSurfacesFilters16.png" />
-	  <Resource Include="Resources\Icons\CreateLinesFilters32.png" />
-	  <Resource Include="Resources\Icons\CreateSurfacesFilters32.png" />
-	  <Resource Include="Resources\Icons\RibbonIcon16.png" />
-	  <Resource Include="Resources\Icons\RibbonIcon32.png" />
+		<Resource Include="Resources\Icons\CODE32.png" />
+		<Resource Include="Resources\Icons\CreateLinesFilters16.png" />
+		<Resource Include="Resources\Icons\CreateSurfacesFilters16.png" />
+		<Resource Include="Resources\Icons\CreateLinesFilters32.png" />
+		<Resource Include="Resources\Icons\CreateSurfacesFilters32.png" />
+		<Resource Include="Resources\Icons\RibbonIcon16.png" />
+		<Resource Include="Resources\Icons\RibbonIcon32.png" />
 	</ItemGroup>
 
-    <ItemGroup>
-      <Compile Update="Commands\Halloween.cs">
-        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-      </Compile>
-      <Compile Update="Properties\Settings.Designer.cs">
-        <DesignTimeSharedInput>True</DesignTimeSharedInput>
-        <AutoGen>True</AutoGen>
-        <DependentUpon>Settings.settings</DependentUpon>
-      </Compile>
-    </ItemGroup>
+	<ItemGroup>
+		<Compile Update="Commands\Halloween.cs">
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Compile>
+		<Compile Update="Properties\Settings.Designer.cs">
+			<DesignTimeSharedInput>True</DesignTimeSharedInput>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Settings.settings</DependentUpon>
+		</Compile>
+		<Compile Update="Views\RibbonEditorView.xaml.cs">
+		  <SubType>Code</SubType>
+		</Compile>
+	</ItemGroup>
 
-    <ItemGroup>
-      <None Update="Properties\Settings.settings">
-        <Generator>SettingsSingleFileGenerator</Generator>
-        <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-      </None>
-    </ItemGroup>
+	<ItemGroup>
+		<None Update="Properties\Settings.settings">
+			<Generator>SettingsSingleFileGenerator</Generator>
+			<LastGenOutput>Settings.Designer.cs</LastGenOutput>
+		</None>
+	</ItemGroup>
 
 </Project>
