--- a/source/SearchFabServicesDialog/CODE.Free.csproj
+++ b/source/SearchFabServicesDialog/CODE.Free.csproj
@@ -176,6 +176,7 @@
 		<Resource Include="Resources\Icons\CreateSurfacesFilters32.png" />
 		<Resource Include="Resources\Icons\RibbonIcon16.png" />
 		<Resource Include="Resources\Icons\RibbonIcon32.png" />
+		<resource Include="Resources\Icons\Viewed &amp; Visible-32-Light.png" />
 	</ItemGroup>
 
 	<ItemGroup>
